# jd-relay

./: .env.example  .gitignore  CMakeLists.txt  Makefile  Makefile.py  README.md  TODO.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt
.github/workflows/: ci-cd.yml
.workbuddy/memory/: 2026-06-18.md  MEMORY.md
agent/: agent.conf.example
agent/crypto/: CMakeLists.txt
agent/crypto/include/jd_relay/crypto/: aes_gcm_cipher.h  base64.h  crypto_codec.h  ecdh_key_exchange.h  ecdsa_signer.h  envelope.h  icipher.h  isigner.h  key_manager.h  replay_guard.h
agent/crypto/src/: aes_gcm_cipher.cpp  base64.cpp  crypto_codec.cpp  ecdh_key_exchange.cpp  ecdsa_signer.cpp  envelope.cpp  key_manager.cpp  replay_guard.cpp
agent/jenkins/: CMakeLists.txt
agent/jenkins/include/jd_relay/jenkins/: jenkins_client.h
agent/jenkins/src/: jenkins_client.cpp
agent/protocol/: CMakeLists.txt
agent/protocol/include/jd_relay/protocol/: handshake.h  util.h
agent/tools/: CMakeLists.txt  agent_main.cpp  decryptor.cpp  encryptor.cpp  keygen.cpp
agent/ws_client/: CMakeLists.txt
agent/ws_client/include/jd_relay/agent/: ws_client.h
agent/ws_client/src/: ws_client.cpp
alembic/: env.py
alembic/versions/: 001_initial_schema.py
cli/: requirements.txt  setup.py
cli/jdcli/: client.py  crypto.py  main.py
cli/jdcli/commands/: notify.py  status.py  trigger.py
config/: agent.conf.example  forwarder.conf.example  special.md
deploy/: .env.production.example  deploy.sh  docker-compose.prod.yml
deploy/docker/: Dockerfile.prod  Dockerfile.python
deploy/nginx/: nginx.conf
deploy/systemd/: jd-relay-agent.service  jd-relay-forwarder.service
docs/: 01-project-overview.md  02-local-dev-setup.md  03-cli-guide.md  04-dingtalk-integration.md  API.md  ARCHITECTURE.md  OPERATIONS.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PROMPT_FOR_AI.md  REQUIREMENTS_AND_IMPLEMENTATION.md  SECURITY.md  TROUBLESHOOTING.md  architecture.md  crypto-spec.md  phase3-summary.md  prompt-for-ai.md  security.md  ui-ux.md
forwarder/: __init__.py
forwarder/app/: __init__.py  config.py  database.py  main.py  state.py
forwarder/app/api/: __init__.py  admin.py  dingtalk.py
forwarder/app/crypto/: aes_gcm.py  base64.py  codec.py  ecdh.py  replay_guard.py
forwarder/app/services/: dingtalk.py  relay.py
forwarder/app/templates/: agents.html  base.html  dashboard.html  orders.html
forwarder/app/ws/: __init__.py  agent_handler.py  manual_server.py  raw_ws.py  server.py
forwarder/config/: forwarder.example.conf
jenkins/: Jenkinsfile.example
jenkins/vars/: dingtalkNotify.groovy
server/: Dockerfile  entrypoint.sh  requirements.txt
server/app/: config.py  database.py  main.py  models.py  schemas.py
server/app/api/: admin.py  dingtalk.py  health.py  jenkins.py
server/app/middleware/: auth.py  logging.py
server/app/services/: crypto_service.py  dingtalk_service.py  jenkins_service.py  relay_service.py
server/app/templates/: approvals.html  base.html  builds.html  config.html  dashboard.html  login.html  logs.html
src/forwarder/: config.py  database.py  main.py  models.py
src/forwarder/api/: admin.py  dingtalk.py
src/forwarder/crypto/: __init__.py  ecdsa.py  envelope.py
src/forwarder/services/: dingtalk.py
src/forwarder/ws/: agent_manager.py  server.py
tests/: CMakeLists.txt  conftest.py
tests/e2e/: test_full_workflow.py
tests/integration/: CMakeLists.txt  test_api_admin.py  test_api_dingtalk_jenkins.py  test_api_health.py  test_cross_ws.cpp  test_cross_ws_server.cpp  test_phase2_transport.cpp
tests/python/: test_aes_gcm.py  test_cross_language.py  test_e2e_cross_ws.py  test_ecdh.py  test_ecdsa.py  test_envelope.py  test_replay_guard.py  test_state.py  test_tamper_detection.py  test_ws_compat.py  test_ws_server.py
tests/unit/: CMakeLists.txt  test_aes_gcm.cpp  test_crypto_service.py  test_dingtalk_service.py  test_ecdh.cpp  test_ecdsa.cpp  test_envelope_roundtrip.cpp  test_jenkins_service.py  test_main.cpp  test_relay_service.py  test_replay_guard.cpp  test_tamper_detection.cpp
