[project]
name = "jd-relay-forwarder"
version = "2.0.0"
description = "JD-Relay Forwarder — cross-network build approval relay (Python)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "cryptography>=41",
    "sqlalchemy>=2.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "websockets>=13",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "websockets>=13",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/python"]
